--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/ExtendedMain.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/ExtendedSecondary.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="style" href="%PUBLIC_URL%/index.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
