project and buy screen templates

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/ExtendedMain.woff" type="font/woff" crossorigin="anonymous">
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/ExtendedSecondary.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" crossorigin type="font/woff" href="%PUBLIC_URL%/fonts/ExtendedMain.woff">
+    <link rel="font" type="font/woff" href="%PUBLIC_URL%/fonts/ExtendedMain.woff">
+    <link rel="preload" as="font" crossorigin type="font/woff" href="%PUBLIC_URL%/fonts/ExtendedSecondary.woff">
+    <link rel="font" type="font/woff" href="%PUBLIC_URL%/fonts/ExtendedSecondary.woff">
     <link rel="preload" as="style" href="%PUBLIC_URL%/index.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
